--- a/Reports/Main_report.Rmd
+++ b/Reports/Main_report.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "Mendelian randomization results for stroke and LP(a)"
 author: "Amy Mason"
-#date: '`r format(Sys.Date(), "%B %d, %Y")`'
+date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output: html_document
+params:
+  dataset: "//me-filer1/home$/am2609/My Documents/Programs/MR Projects/LPA/Outputs/stroke_results.RData"
 ---
 
 ## Table of results
@@ -29,7 +31,7 @@ library(pander)
 ```
 
 ```{r echo=FALSE, include=TRUE, results='asis'}
-load("//me-filer1/home$/am2609/My Documents/Programs/MR Projects/LPA/Outputs/stroke_results.RData")
+load(params$dataset)
 
 input <- data.frame(
   name = sapply(list_save, "[[", 2),
